      \code{setLab} option.

      \item \code{sort.list()}, \code{order()} and \code{sort.int()}
      \code{method} argument gains an \code{"auto"} option (the default)
      which should behave the same as before when \code{method} was left
      missing.

      \item \code{stopifnot(E, ..)} now reports differences when
      \code{E} is a call to \code{all.equal()} and that is not true.
    }
  }
  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The deprecated support for PCRE versions 8.10 to 8.31 will
      be removed prior to \R 3.4.0.

      \item (Windows only) Function \code{setInternet2()} is defunct.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Getting or setting \code{body()} or \code{formals()} on
      non-functions for now signals a warning and may become an error
      for setting.

      \item In \code{text.default(x, y, labels)}, the rarely(?) used
      default for \code{labels} is now correct also for the case of a
      2-column matrix \code{x} and missing \code{y}.

      \item When a class name matches multiple classes in the cache,
      perform a dynamic search in order to obey namespace imports. This
      should eliminate annoying messages about multiple hits in the
      class cache. Also, pass along the package from the
      \code{ClassExtends} object when looking up superclasses in the
      cache.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.3.0 patched}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \command{R CMD INSTALL} and hence \code{install.packages()}
      gave an internal error installing a package called
      \pkg{description} from a tarball on a case-insensitive file system.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.3.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item \code{nchar(x, *)}'s argument \code{keepNA} governing how
      the result for \code{NA}s in \code{x} is determined, gets a new