@@ -1,6 +1,6 @@
 % File src/library/base/man/split.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2012 R Core Team
+% Copyright 1995-2016 R Core Team
 % Distributed under GPL 2 or later
 
 \name{split}
@@ -19,8 +19,10 @@
   \code{split}.
 }
 \usage{
-split(x, f, drop = FALSE, ...)
-split(x, f, drop = FALSE, ...) <- value
+split(x, f, drop = FALSE, \dots)
+\method{split}{default}(x, f, drop = FALSE, lex.order = FALSE, \dots)
+
+split(x, f, drop = FALSE, \dots) <- value
 unsplit(value, f, drop = FALSE)
 }
 \arguments{
@@ -32,6 +34,8 @@ unsplit(value, f, drop = FALSE)
     (if \code{f} is a \code{factor} or a list).}
   \item{value}{a list of vectors or data frames compatible with a
     splitting of \code{x}. Recycling applies if the lengths do not match.}
+  \item{lex.order}{logical, passed to \code{\link{interaction}} in the
+    case where \code{f} is a \code{\link{list}}.}
   \item{\dots}{further potential arguments passed to methods.}
 }
 \details{
